force-app/main/default/objects/Account/fields/NS_Account_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Business_Type__c</fullName>
    <description>A sub-type of the account</description>
    <inlineHelpText>Select the primary sub-type of the Account</inlineHelpText>
    <label>Account Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Economic Development Ally</fullName>
            </value>
            <value>
                <fullName>Engineering Consultant</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Site Selector</fullName>
            </value>
            <value>
                <fullName>State or Local EDC</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Shipper/Receiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>