force-app/main/default/objects/Account/fields/NS_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Tier__c</fullName>
    <label>Customer Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier1</fullName>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>Tier2</fullName>
                <label>Core</label>
            </value>
            <value>
                <fullName>Tier3</fullName>
                <label>Base</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>