force-app/main/default/objects/Account/fields/NS_Address__c.field-meta.xml
<CustomField>
    <fullName>NS_Address__c</fullName>
    <description>It populates this address field based on the record type.</description>
    <formula>IF(OR( RecordType.DeveloperName = &quot;NS_OnlineCustomerCorporate&quot;,RecordType.DeveloperName = &quot;NS_FieldLocation&quot;), 
 NS_PhysicalAddressDetails__c ,IF(RecordType.DeveloperName = &quot;NS_OnlineCustomerBusiness&quot;,  NS_BillingAddressDetails__c , IF(RecordType.DeveloperName = &quot;NS_3PL&quot;,  NS_MailingAddressDetails__c , IF(OR(RecordType.DeveloperName = &quot;NS_OnlineCustomerService&quot;,RecordType.DeveloperName = &quot;NS_OfflineCustomer&quot;,RecordType.DeveloperName = &quot;NS_OtherRailRoad&quot;,RecordType.DeveloperName = &quot;NS_OtherCompany&quot;,RecordType.DeveloperName = &quot;NS_DrayCarrier&quot;,RecordType.DeveloperName = &quot;NS_Port&quot;), NS_ShippingAddressDetails__c , &#39;&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>