force-app/main/default/objects/Account/fields/NS_AssociatedBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_AssociatedBusinessUnit__c</fullName>
    <defaultValue>IF( $RecordType.Name=&#39;Industrial Development&#39;, &#39;Industrial Development&#39;, &#39; &#39;)</defaultValue>
    <description>It indicates the Business Unit or Units with whom a particular Account does business</description>
    <inlineHelpText>Business Unit or Units who do business with that particular Account</inlineHelpText>
    <label>Associated NS Business Unit(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting</fullName>
            </value>
            <value>
                <fullName>Revenue Waybilling</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>