force-app/main/default/objects/Account/fields/NS_BillingAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_BillingAddressDetails__c</fullName>
    <description>It is the combination of Billing Street,City, State and Postal Code.</description>
    <formula>BillingStreet &amp;&#39; &#39;&amp; BillingCity &amp;&#39; &#39;&amp;  BillingState &amp;&#39; &#39;&amp;   BillingCountry &amp;&#39; &#39;&amp;  BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Details</label>
    <type>Text</type>
</CustomField>