force-app/main/default/objects/Account/fields/NS_Cash_in_Fist_Exempt__c.field-meta.xml
<CustomField>
    <fullName>NS_Cash_in_Fist_Exempt__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the customer is Cash in Fist exempt</inlineHelpText>
    <label>Cash in Fist Exempt?</label>
    <type>Checkbox</type>
</CustomField>