force-app/main/default/objects/Account/fields/NS_CIF_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_CIF_Expiration_Date__c</fullName>
    <description>Rail Inc CIF number expiration date</description>
    <label>CIF Expiration Date</label>
    <type>Date</type>
</CustomField>