force-app/main/default/objects/Account/fields/NS_CIF_isExpired__c.field-meta.xml
<CustomField>
    <fullName>NS_CIF_isExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator whether a CIF number is expired</description>
    <inlineHelpText>Indicator whether a CIF number is expired</inlineHelpText>
    <label>CIF Expired</label>
    <type>Checkbox</type>
</CustomField>