force-app/main/default/objects/Account/fields/NS_CIFNumber__c.field-meta.xml
<CustomField>
    <fullName>NS_CIFNumber__c</fullName>
    <description>Nine digit number D&amp;B number provided by Rail Inc.</description>
    <label>CIF Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>