force-app/main/default/objects/Account/fields/NS_CIFSuffix__c.field-meta.xml
<CustomField>
    <fullName>NS_CIFSuffix__c</fullName>
    <description>CIF Suffix</description>
    <label>CIF Suffix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>