force-app/main/default/objects/Account/fields/NS_ClassCode__c.field-meta.xml
<CustomField>
    <fullName>NS_ClassCode__c</fullName>
    <description>It is a 5 or 7 digit transportation class code</description>
    <label>Class Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>