force-app/main/default/objects/Account/fields/NS_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity__c</fullName>
    <description>To be populated from TYES (Integration)</description>
    <label>Unit Train Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Crude Oil</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Envirostone</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>Frac Sand</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Metals</fullName>
            </value>
            <value>
                <fullName>Misc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>