force-app/main/default/objects/Account/fields/NS_ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactTitle__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>