force-app/main/default/objects/Account/fields/NS_ControllingStation__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStation__c</fullName>
    <description>Controlling Station derived from Service Station</description>
    <formula>NS_OperatingStation__r.NS_ControllingStationCode__c &amp; 
if( 
OR( 
ISBLANK(NS_OperatingStation__r.NS_ControllingStationCode__c ),ISBLANK(NS_OperatingStation__r.NS_ControllingStationName__c) 
) ,&#39;&#39;,&#39;-&#39;) &amp; 
NS_OperatingStation__r.NS_ControllingStationName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controlling Station</label>
    <type>Text</type>
</CustomField>