force-app/main/default/objects/Account/fields/NS_Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Corporate_Name__c</fullName>
    <description>ID Corporate Name to be a lookup if used,</description>
    <label>Corporate Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>