force-app/main/default/objects/Account/fields/NS_Customer_Segmentation_Text__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Segmentation_Text__c</fullName>
    <formula>CASE( Text(Parent.NS_Account_Tier__c),
&quot;Tier1&quot;,&quot;Strategic&quot;,
&quot;Tier2&quot;,&quot;Core&quot;,
&quot;Tier3&quot;,&quot;Base&quot;,
&quot;N/A&quot;)</formula>
    <label>Customer Segmentation Text</label>
    <type>Text</type>
</CustomField>