force-app/main/default/objects/Account/fields/NS_CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Account needed in 3PL Account Type</description>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Online Customer – Corporate, Online Customer – Business, Online Customer - Service, Customer (Offline)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>