force-app/main/default/objects/Account/fields/NS_CustomerPrimary__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerPrimary__c</fullName>
    <description>First 6 digits of customer number</description>
    <label>Customer Primary</label>
    <length>6</length>
    <type>Text</type>
</CustomField>