force-app/main/default/objects/Account/fields/NS_CustomerRole__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerRole__c</fullName>
    <description>ConnectNS users are able to manually select Account Roles for Business Accounts</description>
    <label>Customer Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCO</fullName>
            </value>
            <value>
                <fullName>Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>