force-app/main/default/objects/Account/fields/NS_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>NS_Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates if an Account is deactivated.</description>
    <inlineHelpText>Does this Account need to be deactivated?</inlineHelpText>
    <label>Deactivate?</label>
    <type>Checkbox</type>
</CustomField>