force-app/main/default/objects/Account/fields/NS_DeactivationReason__c.field-meta.xml
<CustomField>
    <fullName>NS_DeactivationReason__c</fullName>
    <description>This captures the reason for an Account deactivation.</description>
    <label>Deactivation Reason</label>
    <type>TextArea</type>
</CustomField>