force-app/main/default/objects/Account/fields/NS_Division__c.field-meta.xml
<CustomField>
    <fullName>NS_Division__c</fullName>
    <description>Division Code derived from Division field in Service Station</description>
    <formula>NS_OperatingStation__r.NS_DivisionCode__c  &amp;  
if(
OR(
ISBLANK(NS_OperatingStation__r.NS_DivisionCode__c ),ISBLANK(NS_OperatingStation__r.NS_DivisionName__c)
) ,&#39;&#39;,&#39;-&#39;) &amp; 
NS_OperatingStation__r.NS_DivisionName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>