force-app/main/default/objects/Account/fields/NS_DoT_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_DoT_Number__c</fullName>
    <label>DoT Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>