force-app/main/default/objects/Account/fields/NS_Email__c.field-meta.xml
<CustomField>
    <fullName>NS_Email__c</fullName>
    <description>Corporate email of the account</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>