force-app/main/default/objects/Account/fields/NS_ExistingContact__c.field-meta.xml
<CustomField>
    <fullName>NS_ExistingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It looks up a Contact if User wants to associate an existing Contact for the new Offline Account to be created.</description>
    <label>Existing Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact status should be Active</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>