force-app/main/default/objects/Account/fields/NS_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Expire_Date__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>