force-app/main/default/objects/Account/fields/NS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_External_ID__c</fullName>
    <description>Record unique identifier from Norfolk Southern source systems.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>