force-app/main/default/objects/Account/fields/NS_Function_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Function_Type__c</fullName>
    <label>Function Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IM Domestic</fullName>
            </value>
            <value>
                <fullName>IM International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>