force-app/main/default/objects/Account/fields/NS_GateStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_GateStatus__c</fullName>
    <description>It indicates if a customer’s gate is open or closed</description>
    <inlineHelpText>Indicates whether a customer’s gate is open or closed (Order for Placement or Place on Arrival)</inlineHelpText>
    <label>Gate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPEN - PLACE ON ARRIVAL</fullName>
            </value>
            <value>
                <fullName>CLOSED - ORDER FOR PLACEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>