force-app/main/default/objects/Account/fields/NS_Goodspell__c.field-meta.xml
<CustomField>
    <fullName>NS_Goodspell__c</fullName>
    <description>Will likely become an external relationship field - MDM will bring into Salesforce the Goodspell string on the account</description>
    <label>Goodspell</label>
    <length>250</length>
    <type>Text</type>
</CustomField>