force-app/main/default/objects/Account/fields/NS_InternalSwitching__c.field-meta.xml
<CustomField>
    <fullName>NS_InternalSwitching__c</fullName>
    <description>It indicates if industry performs own plant switching</description>
    <label>Internal Switching</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>