force-app/main/default/objects/Account/fields/NS_JointIndustry__c.field-meta.xml
<CustomField>
    <fullName>NS_JointIndustry__c</fullName>
    <description>It indicates if multiple roads have access.</description>
    <inlineHelpText>Do multiple roads have access?</inlineHelpText>
    <label>Joint Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>