force-app/main/default/objects/Account/fields/NS_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>