force-app/main/default/objects/Account/fields/NS_MailingAddressCity__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressCity__c</fullName>
    <description>Mailing Address City</description>
    <label>Mailing Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>