force-app/main/default/objects/Account/fields/NS_MailingAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressCountry__c</fullName>
    <description>Country of the mailing address</description>
    <label>Mailing Address Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>