force-app/main/default/objects/Account/fields/NS_MailingAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressDetails__c</fullName>
    <description>It is the combination of Mailing Street,City, State and Postal Code.</description>
    <formula>NS_MailingAddressStreet__c
&amp; &#39; &#39; &amp;
NS_MailingAddressCity__c 
&amp; &#39; &#39; &amp;
NS_MailingAddressState__c
&amp; &#39; &#39; &amp;
NS_MailingAddressCountry__c  
&amp; &#39; &#39; &amp;
NS_MailingAddressZip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>