force-app/main/default/objects/Account/fields/NS_MailingAddressState__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressState__c</fullName>
    <description>Mailing Address State</description>
    <label>Mailing Address State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>