force-app/main/default/objects/Account/fields/NS_MailingAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressStreet__c</fullName>
    <description>Mailing Address Street</description>
    <label>Mailing Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>