force-app/main/default/objects/Account/fields/NS_MailingAddressZip__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressZip__c</fullName>
    <description>Mailing Address Zip</description>
    <label>Mailing Address Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>