force-app/main/default/objects/Account/fields/NS_Major_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Major_Commodity__c</fullName>
    <label>Major Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AgFP</fullName>
                <label>Agriculture &amp; Forest Products</label>
            </value>
            <value>
                <fullName>Chem</fullName>
                <label>Chemicals</label>
            </value>
            <value>
                <fullName>MetCon</fullName>
                <label>Metals &amp; Construction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>