force-app/main/default/objects/Account/fields/NS_Major_Commodity_Text__c.field-meta.xml
<CustomField>
    <fullName>NS_Major_Commodity_Text__c</fullName>
    <formula>CASE( Text(Parent.NS_Major_Commodity__c),
&quot;AgFP&quot;,&quot;Agriculture &amp; Forest Products&quot;,
&quot;Chem&quot;,&quot;Chemicals&quot;,
&quot;MetCon&quot;,&quot;Metals &amp; Construction&quot;,
&quot;N/A&quot;)</formula>
    <label>Major Commodity Text</label>
    <type>Text</type>
</CustomField>