force-app/main/default/objects/Account/fields/NS_MDM_EID__c.field-meta.xml
<CustomField>
    <fullName>NS_MDM_EID__c</fullName>
    <description>Norfolk Southern MDM system assigned Enterprise ID</description>
    <label>MDM EID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>