force-app/main/default/objects/Account/fields/NS_MDMMastered__c.field-meta.xml
<CustomField>
    <fullName>NS_MDMMastered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For requests other than On Boarding, &quot;MDM mastered&quot; is available on the Account object</description>
    <label>MDM Mastered</label>
    <type>Checkbox</type>
</CustomField>