force-app/main/default/objects/Account/fields/NS_MeasuredByLOPA__c.field-meta.xml
<CustomField>
    <fullName>NS_MeasuredByLOPA__c</fullName>
    <description>It indicates if customer is measured by LOPA</description>
    <inlineHelpText>Field indicating whether the customer is measured by LOPA</inlineHelpText>
    <label>Measured by LOPA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>