force-app/main/default/objects/Account/fields/NS_Minor_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Minor_Commodity__c</fullName>
    <label>Minor Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_Major_Commodity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Aggregates</fullName>
            </value>
            <value>
                <fullName>Agrifuels</fullName>
            </value>
            <value>
                <fullName>Aluminum Products</fullName>
            </value>
            <value>
                <fullName>Beverages/Cons Prds</fullName>
            </value>
            <value>
                <fullName>Canned Goods</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Coil</fullName>
            </value>
            <value>
                <fullName>Corn &amp; Other Grains</fullName>
            </value>
            <value>
                <fullName>Crude Oil</fullName>
            </value>
            <value>
                <fullName>Feed &amp; Feed Prds</fullName>
            </value>
            <value>
                <fullName>Fertilizers</fullName>
            </value>
            <value>
                <fullName>Flour</fullName>
            </value>
            <value>
                <fullName>Food Oils</fullName>
            </value>
            <value>
                <fullName>Food Products</fullName>
            </value>
            <value>
                <fullName>Graphic Paper</fullName>
            </value>
            <value>
                <fullName>Inorganic Chemicals</fullName>
            </value>
            <value>
                <fullName>Iron &amp; Steel</fullName>
            </value>
            <value>
                <fullName>Kaolin</fullName>
            </value>
            <value>
                <fullName>Lumber &amp; Wood</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Military/Misc Trans</fullName>
            </value>
            <value>
                <fullName>Misc. Construction</fullName>
            </value>
            <value>
                <fullName>Ngls</fullName>
            </value>
            <value>
                <fullName>Organic Chemicals</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>Petroleum Products</fullName>
            </value>
            <value>
                <fullName>Pulp</fullName>
            </value>
            <value>
                <fullName>Pulpboard</fullName>
            </value>
            <value>
                <fullName>Sand - Proppants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>