force-app/main/default/objects/Account/fields/NS_Minor_Commodity_Text__c.field-meta.xml
<CustomField>
    <fullName>NS_Minor_Commodity_Text__c</fullName>
    <formula>Text(Parent.NS_Minor_Commodity__c)</formula>
    <label>Minor Commodity Text</label>
    <type>Text</type>
</CustomField>