force-app/main/default/objects/Account/fields/NS_MonitoredAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_MonitoredAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates a priority Account or an Account that has filed a complaint with STB</description>
    <inlineHelpText>Is the Account currently being monitored?</inlineHelpText>
    <label>Monitored Account</label>
    <type>Checkbox</type>
</CustomField>