force-app/main/default/objects/Account/fields/NS_NotificationStation__c.field-meta.xml
<CustomField>
    <fullName>NS_NotificationStation__c</fullName>
    <description>Service Account&#39;s notification stations</description>
    <label>Notification Station</label>
    <type>TextArea</type>
</CustomField>