force-app/main/default/objects/Account/fields/NS_OfflineContactEmail__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineContactEmail__c</fullName>
    <description>Personal email of Contact associated to the Offline Account.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>