force-app/main/default/objects/Account/fields/NS_OfflineContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineContactFirstName__c</fullName>
    <description>First Name of Contact associated to the Offline Account.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>