force-app/main/default/objects/Account/fields/NS_OfflineContactLastName__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineContactLastName__c</fullName>
    <description>Last Name of Contact associated to the Offline Account.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>