force-app/main/default/objects/Account/fields/NS_OfflineContactMobile__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineContactMobile__c</fullName>
    <description>Mobile phone number of Offline Contact</description>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>