force-app/main/default/objects/Account/fields/NS_OfflineContactWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineContactWorkPhone__c</fullName>
    <description>Work phone of Contact associated to the Offline Account.</description>
    <label>Contact Work Phone</label>
    <type>Phone</type>
</CustomField>