force-app/main/default/objects/Account/fields/NS_OperatingStation__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is a lookup to the service stations available for a particular Account.</description>
    <label>Operating Station</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Inactive Station cannot be added</errorMessage>
        <filterItems>
            <field>NS_ServiceStations__c.NS_StationStatus__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>