force-app/main/default/objects/Account/fields/NS_OperatingStationCity__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationCity__c</fullName>
    <description>Operating Station for the Account</description>
    <formula>NS_OperatingStation__r.NS_OperatingStationCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Station City</label>
    <type>Text</type>
</CustomField>