force-app/main/default/objects/Account/fields/NS_OperatingStationState__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationState__c</fullName>
    <description>Operating Station State for the Account</description>
    <formula>NS_OperatingStation__r.NS_OperatingStationState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Station State</label>
    <type>Text</type>
</CustomField>