force-app/main/default/objects/Account/fields/NS_OpStation__c.field-meta.xml
<CustomField>
    <fullName>NS_OpStation__c</fullName>
    <description>This Operating Station field will be searchable.</description>
    <label>Op Station</label>
    <length>80</length>
    <type>Text</type>
</CustomField>