force-app/main/default/objects/Account/fields/NS_PhysicalAddressCity__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressCity__c</fullName>
    <description>Physical Address City</description>
    <label>Physical Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>