force-app/main/default/objects/Account/fields/NS_PhysicalAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressCountry__c</fullName>
    <description>Country of the physical address</description>
    <label>Physical Address Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>