force-app/main/default/objects/Account/fields/NS_PhysicalAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressDetails__c</fullName>
    <description>It is the combination of Physical Street,City, State and Postal Code.</description>
    <formula>NS_PhysicalAddressStreet__c
&amp; &#39; &#39; &amp;
NS_PhysicalAddressCity__c
&amp; &#39; &#39; &amp;
NS_PhysicalAddressState__c 
&amp; &#39; &#39; &amp;
NS_PhysicalAddressCountry__c
&amp; &#39; &#39; &amp;
NS_PhysicalAddressZip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>