force-app/main/default/objects/Account/fields/NS_PhysicalAddressState__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressState__c</fullName>
    <description>Physical Address State</description>
    <label>Physical Address State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>